fixed footer on mobile < 400px

--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -94,3 +94,18 @@
         font-size: 0.75rem;
     }
 }
+
+@media (max-width: 400px){
+    .proj-img{
+        height: 400px;
+    }
+
+    .project-card p {
+        font-size: 0.75rem;
+    }
+    
+    .carousel-control-prev-icon, .carousel-control-next-icon {
+        height: 49px;
+        width: 30px;
+    }
+}
